java/java-tests/testData/codeInsight/daemonCodeAnalyzer/advHighlighting/packageClassClash/pkg/sub.java
package pkg;

<error descr="Class 'pkg.sub' clashes with package of same name">public class sub</error> { }